--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>harrowschool.io</h1>
 <p>The website for the Harrow School Computer Science Department</p>
+<p>A good place for learning basic web design!</p>
 
 </body>
 </html>
