--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1>harrowschool.io</h1>
 <p>The website for the Harrow School Computer Science Department</p>
 <p>A good place for learning basic web design!</p>
-
+<A HREF="zigzag/index.html">Zigzag resources</A>
 </body>
 </html>
