Added default layout

--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>harrowschool.io</title>
-<meta name='robots' content='noindex,follow' />
-</head>
-<body>
+---
+title: harrowschool.io
+layout: default
+---
 
-<h1>harrowschool.io</h1>
 <p>The website for the Harrow School Computer Science Department</p>
 <p>A good place to test basic web design!</p>
 <A HREF="zigzag/index.html">Zigzag resources</A>
-</body>
-</html>
