Attempt to add project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ title: harrowschool.io
 layout: default
 ---
 
-<p>The website for the Harrow School Computer Science Department</p>
-<p>A good place to test basic web design!</p>
-<A HREF="zigzag/index.html">Zigzag resources</A>
+<p>Welcome to the website for the Harrow School Computer Science Department.</p>
+<p>Here are some links you ma</p>
+
+<a href="zigzag/index.html">Zigzag Resources</a>
