Changed home page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ layout: default
 ---
 
 <p>Welcome to the website for the Harrow School Computer Science Department.</p>
-<p>Here are some links you ma</p>
+<p>Use the links below to browse the site:</p>
 
-<a href="zigzag/index.html">Zigzag Resources</a>
+<ul>
+    <li><a href="projects">Summer Projects</a></li>
+    <li><a href="zigzag/index.html">Zigzag Resources</a></li>
+</ul>
+
