--- a/projects/index.html
+++ b/projects/index.html
@@ -4,5 +4,6 @@ layout: default
 ---
 
 <ul>
-    <li><a href="19PlyushchenkoV">19PlyushchenkoV</a>
+    <li><a href="19PlyushchenkoV">19PlyushchenkoV</a></li>
+    <li><a href="https://canvasguesser.tk">19KainthD</a></li>
 <ul>
