--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@ layout: default
 ---
 
 <ul>
-    <li><a href="19PlyushchenkoV">19PlyushchenkoV</a></li>
     <li><a href="https://canvasguesser.tk">19KainthD</a></li>
+    <li><a href="19PlyushchenkoV">19PlyushchenkoV</a></li>
+    <li><a href="19ZampaU">19ZampaU</a></li>
 <ul>
