--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,8 @@ layout: default
 
 <ul>
     <li><a href="https://canvasguesser.tk">19KainthD</a></li>
+    <li><a href="19LanniJ">19LanniJ</a></li>
     <li><a href="19PlyushchenkoV">19PlyushchenkoV</a></li>
+    <li><a href="https://github.com/PerceptronV/dudocode">19SongY</a></li>
     <li><a href="19ZampaU">19ZampaU</a></li>
 <ul>
