--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 <p>Welcome to the website for the Harrow School Computer Science Department.</p>
 <p>Use the links below to browse the site:</p>
-
+<!--Euler 31-->
 <ul>
     <li><a href="projects">Summer Projects</a></li>
     <li><a href="zigzag/index.html">Zigzag Resources</a></li>
