--- a/450.html
+++ b/450.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Harrow 450</h1>
     
-    <iframe src="https://raw.githubusercontent.com/harrowschool/450/master/index.html" title="Harrow 450"></iframe>
+    <iframe srcdoc="https://raw.githubusercontent.com/harrowschool/450/master/index.html" title="Harrow 450"></iframe>
     
     <footer>
       &copy; Harrow School 2021
