--- a/450.html
+++ b/450.html
@@ -10,8 +10,7 @@
   <body>
     <h1>Harrow 450</h1>
     
-    <iframe srcdoc="https://raw.githubusercontent.com/harrowschool/450/master/index.html" title="Harrow 450"></iframe>
-    
+      Harrow School    
     <footer>
       &copy; Harrow School 2021
     </footer>
