--- a/mental-maths-challenge/index.html
+++ b/mental-maths-challenge/index.html
@@ -10,7 +10,13 @@
   <body>
     <script src="script.js"></script>
     <h1>Mental Maths Challenge</h1>
-    <button onclick="multiplication2x2()">2x2 Multiplication</button>
+    <button onclick="addition(2, 2)">2 x 2 Addition</button>
+    <button onclick="addition(3, 3)">3 x 3 Addition</button>
+    <button onclick="subtraction(2, 2)">2 x 2 Subtraction</button>
+    <button onclick="subtraction(3, 3)">3 x 3 Subtraction</button>
+    <button onclick="multiplication(2, 1)">2 x 1 Multiplication</button>
+    <button onclick="multiplication(3, 1)">3 x 1 Multiplication</button>
+    <button onclick="multiplication(2, 2)">2 x 2 Multiplication</button>
     <button onclick="showAnswer()">Show Answer</button>
     <p id="question"></p>
     <p id="answer"></p>
