--- a/mental-maths-challenge/index.html
+++ b/mental-maths-challenge/index.html
@@ -17,7 +17,8 @@
     <button onclick="multiplication(2, 1)">2 x 1 Multiplication</button>
     <button onclick="multiplication(3, 1)">3 x 1 Multiplication</button>
     <button onclick="multiplication(2, 2)">2 x 2 Multiplication</button>
-    <button onclick="showAnswer()">Show Answer</button>
+    <button onclick="showAnswers()">Show Answers</button>
+    <button onclick="clearAnswers()">Clear Answers</button>
     <p id="question"></p>
     <p id="answer"></p>
   </body>
