--- a/450/index.html
+++ b/450/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="450.css">
   </head>
   <body>
-    <h1>Harrow 450</h1>
-    
-      Harrow School    
+      <img src="logo.png">
+      {% include content.md %}
     <footer>
       &copy; Harrow School 2021
     </footer>
