--- a/450/index.html
+++ b/450/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <img src="logo.png">
-      {% include content.md %}
+      {% include_relative content.md %}
     <footer>
       &copy; Harrow School 2021
     </footer>
