--- a/450-test/index.html
+++ b/450-test/index.html
@@ -7,9 +7,9 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <h1 class="pink">Celebrating 450 years of community on the Hill</h1>
 <h1 class="turquoise">30 April noon – 6pm</h1>
 
-Residents and friends from around the Hill are invited to join in a day of celebration to mark the 450th anniversary of Harrow School. There’s something for everyone and new events are being added to all the time. This information will be updated regularly up until and including Saturday 30 April.
+<p>Residents and friends from around the Hill are invited to join in a day of celebration to mark the 450th anniversary of Harrow School. There’s something for everyone and new events are being added to all the time. This information will be updated regularly up until and including Saturday 30 April.</p>
 
-**Last updated: {{ page.date | date: "%A %-d %B" }}**
+<p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
 <h1 class="orange">Events</h1>
 
