Changed paragraph breaking in some paragraphs

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -70,9 +70,9 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Harrow Steel Band and Harrow Indie Choir</summary>
 <p><b>Harrow Steel</b></p>
-<p>Harrow Steel was formed in 1992 and provides an opportunity for gifted and talented young musicians aged 8-21 to learn challenging music aurally within a steel band. We support the engagement of musical talent, in a multicultural environment across Harrow and NW London. Weekly rehearsals are held at Whitmore High School in Harrow.<br>
-    We have performed at Notting Hill Carnival on three occasions, where we were voted ‘Best Band on the road’.  Other notable performances have been for BBC programmes such as Blue Peter, Record Breakers and You and Me.  The Band have also toured Europe and performed in Barcelona, Salzburg, Paris, Lake Garda, Venice, Ostend and Amsterdam.<br>
-    We are very proud of our Alumni, many who still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians. <br>
+<p>Harrow Steel was formed in 1992 and provides an opportunity for gifted and talented young musicians aged 8-21 to learn challenging music aurally within a steel band. We support the engagement of musical talent, in a multicultural environment across Harrow and NW London. Weekly rehearsals are held at Whitmore High School in Harrow.<br><br>
+    We have performed at Notting Hill Carnival on three occasions, where we were voted ‘Best Band on the road’.  Other notable performances have been for BBC programmes such as Blue Peter, Record Breakers and You and Me.  The Band have also toured Europe and performed in Barcelona, Salzburg, Paris, Lake Garda, Venice, Ostend and Amsterdam.<br><br>
+    We are very proud of our Alumni, many who still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians. <br><br>
     Our funders include:  John Lyon's Charity, Harrow Giving and the Young Harrow Foundation.
 </p>
 
@@ -166,9 +166,9 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>Kidology</summary>
-<p>Kidology Dance Co was established in 2010 by Nicky Rutter and Lauren O'Connell.
-    We have a passion for performing, teaching and helping young people to realise their talents and progress within their future in dance. We specialise in street/ Hip-Hop dance, contemporary, musical theatre and have directed and produced a number of sold-out shows, competed in competitions throughout the country and had dancers go on to do remarkable things. Our aim is to work with dancers to enhance their talents, draw on their strengths and build their confidence.
-    We are very fortunate to work with a thriving and well-presented group of young and talented students. We encourage everyone to take part in as many performance opportunities as they can throughout the year especially if dance is something they wish to pursue later in life. </p>
+<p>Kidology Dance Co was established in 2010 by Nicky Rutter and Lauren O'Connell.<br><br>
+    We have a passion for performing, teaching and helping young people to realise their talents and progress within their future in dance. We specialise in street/ Hip-Hop dance, contemporary, musical theatre and have directed and produced a number of sold-out shows, competed in competitions throughout the country and had dancers go on to do remarkable things. Our aim is to work with dancers to enhance their talents, draw on their strengths and build their confidence.<br><br>
+    We are very fortunate to work with a thriving and well-presented group of young and talented students. We encourage everyone to take part in as many performance opportunities as they can throughout the year especially if dance is something they wish to pursue later in life.<br><br> </p>
 <p>📍 Bill Yard</p>
 <p>🕓 2.30pm – 3.00pm, 4.15pm - 4.45pm</p>
 </details>
@@ -204,10 +204,10 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <summary>Traditional Dance</summary>
 
 <p><b>Merrydowners Morris</b></p>
-    <p>Founded in 1990 as a fun entry in a local Church Fete (St. Alban, North Harrow), we practiced in secret as, at the time, one of the team was the vicar of the church so you can imagine the gasps of surprise at our debut!<br>
-        We enjoyed the experience so much that several of the original church members are still performing.<br>
-        During the past 31 years we have performed across London, in France and  Germany, the highlights being; The Guildhall City of London for the inaugural Dinner of the 1996 European football championships; representing England at The Hong Kong Chinese New Year parade in 2004; La Fetes du Gayants, Douai Pas de Calais in 2001 and 2003; Recklinghausen Germany for the annual Concert of The Akkordeonklaenge von Recklinghausen Westfallen in 2005. <br>
-        We took part many times in London’s New Year’s Day parade and have also appeared in a pop music video and, albeit briefly, on the BBC’s Strictly Come Dancing and also on The One Show! <br>
+    <p>Founded in 1990 as a fun entry in a local Church Fete (St. Alban, North Harrow), we practiced in secret as, at the time, one of the team was the vicar of the church so you can imagine the gasps of surprise at our debut!<br><br>
+        We enjoyed the experience so much that several of the original church members are still performing.<br><br>
+        During the past 31 years we have performed across London, in France and  Germany, the highlights being; The Guildhall City of London for the inaugural Dinner of the 1996 European football championships; representing England at The Hong Kong Chinese New Year parade in 2004; La Fetes du Gayants, Douai Pas de Calais in 2001 and 2003; Recklinghausen Germany for the annual Concert of The Akkordeonklaenge von Recklinghausen Westfallen in 2005. <br><br>
+        We took part many times in London’s New Year’s Day parade and have also appeared in a pop music video and, albeit briefly, on the BBC’s Strictly Come Dancing and also on The One Show! <br><br>
         We were also honoured to be included in Harrow’s Diamond Jubilee celebrations and performed for HRH The Duke of Edinburgh.</p>
 
 
@@ -262,3 +262,4 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>Public parking is available in the Queen’s House Car Park, Kymberley Road, London, HA1 1US (<a href="https://goo.gl/maps/keAqtqzrvP2NYrpA6">Google Maps</a>/<a href="https://maps.apple.com/?address=104%20College%20Road,%20Harrow,%20HA1%201BQ,%20England&auid=11423917619285009007&ll=51.580760,-0.339339">Apple Maps</a>) and a free shuttle bus from the car park to Davidson Lane will be in operation.</p>
 
 <p>There will be accessibility parking on London Road at the south end of the Hill.</p>
+
