Changed b tags to strong tags

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -69,7 +69,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>Harrow Steel Band and Harrow Indie Choir</summary>
-<p><b>Harrow Steel</b></p>
+<p><strong>Harrow Steel</strong></p>
 <p>Harrow Steel was formed in 1992 and provides an opportunity for gifted and talented young musicians aged 8-21 to learn challenging music aurally within a steel band. We support the engagement of musical talent, in a multicultural environment across Harrow and NW London. Weekly rehearsals are held at Whitmore High School in Harrow.<br><br>
     We have performed at Notting Hill Carnival on three occasions, where we were voted ‘Best Band on the road’.  Other notable performances have been for BBC programmes such as Blue Peter, Record Breakers and You and Me.  The Band have also toured Europe and performed in Barcelona, Salzburg, Paris, Lake Garda, Venice, Ostend and Amsterdam.<br><br>
     We are very proud of our Alumni, many who still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians. <br><br>
@@ -138,7 +138,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Stagecoach, Irish Dance Group, and Barefoot Dance</summary>
 
-<b>Stagecoach</b>
+<strong>Stagecoach</strong>
 <p>Stagecoach Harrow is in its 29th Year and was one of the first Stagecoach schools to open based at Rooks Heath College.  Emmy Hamilton has been Principal for 15 of those years and is proud to be at the head of this energetic and creative Performing Arts School in the borough.  At this event are dedicated students from Stagecoach Harrow’s Dance Troupe ( performing some street and musical theatre) and our 15 year+ group ‘Further Stages’ who will be performing some of their Performance Arts Awards Exam work, based on life in 1940’s.  There are two other Stagecoach centres in the borough.  Stagecoach Harrow on the Hill and Stagecoach HarrowWeald ,all three providing quality, nurturing environments in part time performing arts lessons for our students to thrive in, from 4-19yrs.  With lots of opportunities for students to be themselves, develop skills and confidence, make new friends and have a chance to shine.  Professional work and West End opportunities along with added value in LAMDA lessons are also available. Enquire at <a href="www.stagecoach.co.uk/harrow">www.stagecoach.co.uk/harrow</a></p>
 <p>🕓 2.05pm – 4.45pm</p>
 <table>
@@ -185,7 +185,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <p>🕓 12pm, 1pm, 2pm, 3pm, 4pm, 5pm</p>
 <p>📍 Bill Yard</p>
-<p>⭐ Register with <b>Victoria Perry</b>  [<a href="mailto:tours@harrowschool.org.uk">tours@harrowschool.org.uk</a> ]  (Please include your name, contact number the number of places you would like to book, and your preferred tour time)</p>
+<p>⭐ Register with <strong>Victoria Perry</strong>  [<a href="mailto:tours@harrowschool.org.uk">tours@harrowschool.org.uk</a> ]  (Please include your name, contact number the number of places you would like to book, and your preferred tour time)</p>
 </details>
 
 <details>
@@ -197,13 +197,13 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <p>🕓 3pm</p>
 <p>📍 St Mary's</p>
-<p>⭐ Register with <b>Robert Lemon</b>  [<a href="tel:+447836638620">07836 638620</a> ]  [<a href="mailto:robertlemon@live.co.uk">robertlemon@live.co.uk</a>]</p>
+<p>⭐ Register with <strong>Robert Lemon</strong>  [<a href="tel:+447836638620">07836 638620</a> ]  [<a href="mailto:robertlemon@live.co.uk">robertlemon@live.co.uk</a>]</p>
 </details>
 
 <details>
 <summary>Traditional Dance</summary>
 
-<p><b>Merrydowners Morris</b></p>
+<p><strong>Merrydowners Morris</strong></p>
     <p>Founded in 1990 as a fun entry in a local Church Fete (St. Alban, North Harrow), we practiced in secret as, at the time, one of the team was the vicar of the church so you can imagine the gasps of surprise at our debut!<br><br>
         We enjoyed the experience so much that several of the original church members are still performing.<br><br>
         During the past 31 years we have performed across London, in France and  Germany, the highlights being; The Guildhall City of London for the inaugural Dinner of the 1996 European football championships; representing England at The Hong Kong Chinese New Year parade in 2004; La Fetes du Gayants, Douai Pas de Calais in 2001 and 2003; Recklinghausen Germany for the annual Concert of The Akkordeonklaenge von Recklinghausen Westfallen in 2005. <br><br>
