Added new content

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -42,6 +42,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>Miriam's Munchies</summary>
+<p>Miriam's Munchies is a women led artisan bakery and coffee van, based locally in Harrow. Since 2007, we have been baking delicious cakes using high quality, seasonal and locally sourced ingredients. On our mobile coffee van, we’ll be serving  a range of our cakes alongside coffee sourced and roasted by Monmouth Coffee Company, Birchall teas, and homemade iced teas and chai. <a href="https://www.miriamsmunchies.co.uk/coffee-van/">www.miriamsmunchies.co.uk/coffee-van/</a></p>
 <p>📍 Grove Hill</p>
 </details>
 
@@ -105,13 +106,13 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <summary>Community Production: Noye's Fludde</summary>
 <p>A flood is coming, but Noah is building a boat, in the hope that a new world will be waiting on the other side.</p>
 <p>As part of Harrow School's Community Day, members of the Drama and Music departments direct a joyous new production of Benjamin Britten's community opera, combining the talents of more than a hundred children from four primary schools: Byron Court, Norbury, St Anselm's and St Jerome's from across the borough, and Bishopshalt School.</p>
-<p>🕓 2pm – 3.15pm and 5pm – 6.15pm</p>
+<p>🕓 2pm, 5pm</p>
 <p>📍 Speech Room</p>
 </details>
 
 <details>
 <summary>Costume-themed Streets</summary>
-<p>Victorian West Street, Edwardian High Street, Elizabethan Old Schools, and the Church</p>
+<p>Victorian West Street, Edwardian High Street, Elizabethan Old Schools, and the Church. With many thanks to the members of the Harrow on the Hill Women's Institute for the more than 600m of wonderful handmade bunting and to the boys of Harrow School for all the flags.</p>
 <p>📍 West Street, High Street, Old Schools, St Mary's</p>
 </details>
 
@@ -142,8 +143,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Harrow Hill Trust Guided Walk</summary>
 <p>The Harrow Hill Trust will hold a guided tour of the Hill led by Jonathan Edwards. The walk will take in some of the events, people and buildings that helped shape the Hill, from Tudor times through to the 21st Century.</p>
- 
-<p>Please register for this walk with Robert Lemon  07836 638620 <a href="mailto:robertlemon@live.co.uk">robertlemon@live.co.uk</a></p>
+<p>Please register for this walk, for which there is no charge, with Robert Lemon  07836 638620 <a href="mailto:robertlemon@live.co.uk">robertlemon@live.co.uk</a></p>
 <p>🕓 3pm – 4pm</p>
 <p>📍 St Mary's Church</p>
 </details>
@@ -158,6 +158,10 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>Harrow Steel Band</summary>
+<p>Harrow Steel was formed in 1992 and provides an opportunity for gifted and talented young musicians aged 8-21 to learn challenging music aurally within a steel band. We support the engagement of musical talent, in a multicultural environment across Harrow and NW London. Weekly rehearsals are held at Whitmore High School in Harrow.</p>
+<p>We have performed at Notting Hill Carnival on three occasions, where we were voted ‘Best Band on the road’. Other notable performances have been for BBC programmes such as Blue Peter, Record Breakers, and You and Me. The Band have also toured Europe and performed in Barcelona, Salzburg, Paris, Lake Garda, Venice, Ostend, and Amsterdam.</p>
+<p>We are very proud of our Alumni, many of whom still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians.</p> <p>Our funders include: John Lyon's Charity, Harrow Giving, and the Young Harrow Foundation.</p> 
+<p>Please get in touch for further info: <a href="mailto:bandmanager@harrowsteel.org.uk">bandmanager@harrowsteel.org.uk</a></p>
 <p>🕓 2pm, 3.45pm, 5.15pm</p>
 <p>📍 Roof Terrace</p>
 </details>
@@ -211,6 +215,11 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <tr><td>5.00pm</td><td>Traditional Irish Music</td></tr>
 <tr><td>5.30pm</td><td>The Aftercare (Harrow School)</td></tr>
 </table>
+<p>The London Irish Music School was established in 1999 under the direction of Colette Keaveney (TTCT) who is a qualified teacher of Traditional Irish Music registered with Comhaltas Ceoltoiri Eireann in Dublin, Ireland.</p>
+<p>The aim of Comhaltas Ceoltoiri Eireann is to promote the Music, Culture and Arts of Ireland at Home and Abroad. The London Irish Music School’s main objective is to fulfil this aim and to be able to reach as many children as possible.</p>
+<p>Weekly classes take place during term time at a community venue in Brent and at two schools in Harrow as part of their music curriculum.</p>
+<p>Workshops are held regularly with different tutors in a small group or individual setting to give more in-depth tuition, once children have passed the beginner stage and progressed onto a second instrument.</p>
+
 <p>📍 Bandstand</p>
 </details>
 
