Added times for food outlets

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -43,12 +43,14 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Miriam's Munchies</summary>
 <p>Miriam's Munchies is a women led artisan bakery and coffee van, based locally in Harrow. Since 2007, we have been baking delicious cakes using high quality, seasonal and locally sourced ingredients. On our mobile coffee van, we’ll be serving  a range of our cakes alongside coffee sourced and roasted by Monmouth Coffee Company, Birchall teas, and homemade iced teas and chai. <a href="https://www.miriamsmunchies.co.uk/coffee-van/">www.miriamsmunchies.co.uk/coffee-van/</a></p>
+<p>🕓 noon – 6pm</p>
 <p>📍 Grove Hill</p>
 </details>
 
 <details>
 <summary>WI Cake Stall</summary>
 <p>A selection of wonderful home-made cakes for sale.</p>
+<p>🕓 noon – 6pm</p>
 <p>📍 Centre of the Hill</p>
 </details>
 
