--- a/450-test/index.html
+++ b/450-test/index.html
@@ -37,6 +37,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Free Range Jane</summary>
 <p>Free Range Jane specialises in luxury free-range fried chicken burgers and hand cut chips. We make all our sauces in house and conscientiously source our free-range chicken from a small butcher in Wiltshire. We will be in situ on Grove Hill next to Miriam's Munchies, and will be serving delicious free-range fried chicken all afternoon.</p>
+<p>🕓 noon – 6pm</p>
 <p>📍 Grove Hill</p>
 </details>
 
@@ -51,7 +52,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <summary>WI Cake Stall</summary>
 <p>A selection of wonderful home-made cakes for sale.</p>
 <p>🕓 noon – 6pm</p>
-<p>📍 Centre of the Hill</p>
+<p>📍 Opposite Druries</p>
 </details>
 
 <h1 class="orange">Events</h1>
@@ -66,6 +67,8 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>ArtPerUk Peruvian Dance</summary>
+<img src="/450/ArtPerUK.jpeg" width=100% height=auto>
+<p>ArtPerÚK is a Peruvian folkloric dance academy that promotes Peruvian traditional dances from the Coast, the Andes and the Jungle of Peru, enhancing people to explore the diversity, music and rhythms of Latin American culture with the wider community in London. Allowing them to appreciate the artistic richness of culture. Our main goal is to continue promoting our traditions and heritage in the UK.</p>
 <p>🕓 2pm – 3pm</p>
 <p>📍 Outside Vaughan Library</p>
 </details>
@@ -73,11 +76,13 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Art, Photography and Sculpture Exhibitions</summary>
 <p>Work by local schools and adult art groups</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Pasmore Gallery and Grove Hill</p>
 </details>
 
 <details>
 <summary>Art Workshop</summary>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Outside Druries</p>
 </details>
 
@@ -89,6 +94,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>Basketball Competition</summary>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Sports Hall</p>
 </details>
 
@@ -115,12 +121,15 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Costume-themed Streets</summary>
 <p>Victorian West Street, Edwardian High Street, Elizabethan Old Schools, and the Church. With many thanks to the members of the Harrow on the Hill Women's Institute for the more than 600m of wonderful handmade bunting and to the boys of Harrow School for all the flags.</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 West Street, High Street, Old Schools, St Mary's</p>
 </details>
 
 <details>
 <summary>Cricket Festival</summary>
 <p>Youth cricket teams: Harrow CC, Harrow Town CC, Harrow St Mary’s CC, Newton Farm Primary School, Byron Court Primary School, Pinner Park Primary School, Whitchurch Primary School, and West Lodge Primary School.</p>
+<p>🕓 2pm – 6pm</p>
+<p>📍 Cricket Pitches</p>
 </details>
 
 <details>
@@ -132,6 +141,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Exhibition of Traditional Games</summary>
 <p>Including Squash – which was invented at Harrow – Fives, Rackets, Judo and Archery</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Sports Hall</p>
 </details>
 
@@ -164,7 +174,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>We have performed at Notting Hill Carnival on three occasions, where we were voted ‘Best Band on the road’. Other notable performances have been for BBC programmes such as Blue Peter, Record Breakers, and You and Me. The Band have also toured Europe and performed in Barcelona, Salzburg, Paris, Lake Garda, Venice, Ostend, and Amsterdam.</p>
 <p>We are very proud of our Alumni, many of whom still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians.</p> <p>Our funders include: John Lyon's Charity, Harrow Giving, and the Young Harrow Foundation.</p> 
 <p>Please get in touch for further info: <a href="mailto:bandmanager@harrowsteel.org.uk">bandmanager@harrowsteel.org.uk</a></p>
-<p>🕓 2pm, 3.45pm, 5.15pm</p>
+<p>🕓 2pm, 3.45pm, 5pm</p>
 <p>📍 Roof Terrace</p>
 </details>
 
@@ -206,7 +216,6 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Music at the Bandstand</summary>
 <p>Enjoy a full programme of traditional bandstand entertainment including brass, wind and concert bands.</p>
-<p>🕓 2pm – 6pm</p>
 <table>
 <tr><td>2.00pm</td><td>Orley Farm (Year 8 Rock Band, String Quartet and Chamber Choir)</td></tr>
 <tr><td>2.30pm</td><td>John Lyon and Quainton Hall</td></tr>
@@ -221,24 +230,27 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>The aim of Comhaltas Ceoltoiri Eireann is to promote the Music, Culture and Arts of Ireland at Home and Abroad. The London Irish Music School’s main objective is to fulfil this aim and to be able to reach as many children as possible.</p>
 <p>Weekly classes take place during term time at a community venue in Brent and at two schools in Harrow as part of their music curriculum.</p>
 <p>Workshops are held regularly with different tutors in a small group or individual setting to give more in-depth tuition, once children have passed the beginner stage and progressed onto a second instrument.</p>
-
+<p>🕓 2pm – 6pm</p>
 <p>📍 Bandstand</p>
 </details>
 
 <details>
 <summary>Old Speech Room Gallery 450 Exhibition</summary>
 <p>Harrow 1572-2022: from the time of Elizabeth I to the present day, this exhibition is a visual tour through time, full of local legend and newly researched revelations.</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Old Speech Room Gallery</p>
 </details>
 
 <details>
 <summary>Punch and Judy Show and Magician</summary>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Outside Bradbys</p>
 </details>
 
 <details>
 <summary>Rayleigh Observatory</summary>
 <p>Find out about the observation of planets, galaxies and other astronomical phenomena.</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Rayleigh Observatory</p>
 </details>
 
@@ -259,6 +271,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>St Mary's</summary>
 <p>After listening to the bellringing opening the Community Day why not climb the tower and go onto the flat roof (weather permitting) to see the stunning views of the Hill and London.  Come and meet Elizabeth I and John Lyon, who founded the School and other characters in costume who will tell you some of the history of the School and church. Visit the church where boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Percival and authors Lord Byron, Sheridan, and Anthony Trollope. Go on our churchyard trail or have a cuppa at our Spire Cafe.</p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 St Mary's</p>
 </details>
 
@@ -271,6 +284,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Tai Chi</summary>
 <p>We are a community tai chi group called Harrow Tai Chi for Health. We offer free tai chi sessions at Harrow Recreation Ground every Friday 9.30 to 10.30am for health and general well-being. For more information please email <a href="mailto:info@harrowrec.org.uk">info@harrowrec.org.uk</a></p>
+<p>🕓 2pm – 6pm</p>
 <p>📍 Bill Yard</p>
 </details>
 
