Fixed missing image

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -67,7 +67,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <details>
 <summary>ArtPerUk Peruvian Dance</summary>
-<img src="/450/ArtPerUK.jpeg" width=100% height=auto>
+<img src="/450/ArtPerUk.jpeg" width=100% height=auto>
 <p>ArtPerÚK is a Peruvian folkloric dance academy that promotes Peruvian traditional dances from the Coast, the Andes and the Jungle of Peru, enhancing people to explore the diversity, music and rhythms of Latin American culture with the wider community in London. Allowing them to appreciate the artistic richness of culture. Our main goal is to continue promoting our traditions and heritage in the UK.</p>
 <p>🕓 2pm – 3pm</p>
 <p>📍 Outside Vaughan Library</p>
